tests/output/self_hosted/assert_wrong_args_error.txt
tests/assert_wrong_args_error.oomph:2: error: assert must be called with 1 argument

    assert(true, "lol")
    ^^^^^^

assert() failed in "self_hosted/error.oomph", line N
